feat(CAT-FR-GD-01): resolve IDE warnings