@@ -98,7 +98,7 @@ public class SchemaStoreTest {
     Set<String> extractedTermsSet = new HashSet<>();
     try ( InputStream resource = extractedTerms.getContentAsStream()) {
       List<String> extractedList = new BufferedReader(new InputStreamReader(resource,
-          StandardCharsets.UTF_8)).lines().collect(Collectors.toList());
+          StandardCharsets.UTF_8)).lines().toList();
       extractedTermsSet = new HashSet<>(extractedList);
     }
     return extractedTermsSet;
@@ -249,7 +249,7 @@ public class SchemaStoreTest {
   }
   
   @Test
-  public void testValidJSONlD() throws UnsupportedEncodingException {
+  public void testValidJSONlD() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
     expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
     String path = "Schema-Tests/validShacl.jsonld";
@@ -265,7 +265,7 @@ public class SchemaStoreTest {
   }
   
   @Test
-  public void testValidRDFXML() throws UnsupportedEncodingException {
+  public void testValidRDFXML() {
     Set<String> expectedExtractedUrlsSet = new HashSet<>();
     expectedExtractedUrlsSet.add("http://w3id.org/gaia-x/validation#PhysicalResourceShape");
     String path = "Schema-Tests/validShacl.rdfxml";
@@ -317,7 +317,7 @@ public class SchemaStoreTest {
    *
    */
   @Test
-  public void testAddSchemaWithLongContent() throws IOException {
+  public void testAddSchemaWithLongContent() {
     log.info("testAddSchemaWithLongContent");
 
     String path = "Schema-Tests/schema.ttl";
@@ -337,7 +337,7 @@ public class SchemaStoreTest {
    * Test of addSchema method, of class SchemaManagementImpl. Adding the schema twice
    */
   @Test
-  public void testAddDuplicateSchema() throws IOException {
+  public void testAddDuplicateSchema() {
     log.info("testAddDuplicateSchema");
     String path = "Schema-Tests/valid-schemaShape.ttl";
     schemaStore.addSchema(TestUtil.getAccessor(getClass(), path));
@@ -378,7 +378,7 @@ public class SchemaStoreTest {
    * Test of updateSchema method, of class SchemaManagementImpl.
    */
   @Test
-  public void test03UpdateSchema() throws IOException {
+  public void test03UpdateSchema() {
     log.info("UpdateSchema");
     String path1 = "Schema-Tests/valid-schemaShapeReduced.ttl";
     String path2 = "Schema-Tests/valid-schemaShape.ttl";
@@ -425,7 +425,7 @@ public class SchemaStoreTest {
    * Test of getCompositeSchema method, of class SchemaManagementImpl.
    */
   @Test
-  public void testGetCompositeSchema() throws IOException {
+  public void testGetCompositeSchema() {
     Model modelActual = ModelFactory.createDefaultModel();
     String sub01 = "http://w3id.org/gaia-x/validation#PhysicalResourceShape";
     String pre01 = "http://www.w3.org/1999/02/22-rdf-syntax-ns#type";
@@ -459,7 +459,7 @@ public class SchemaStoreTest {
 
     schemaStore.addSchema(TestUtil.getAccessor(getClass(), schemaPath2));
 
-    schemaResult = schemaStore.analyzeSchema(schema02Content);
+    schemaStore.analyzeSchema(schema02Content);
 
     compositeSchemaActual = schemaStore.getCompositeSchema(SHAPE);
 
@@ -671,13 +671,14 @@ public class SchemaStoreTest {
 
   @Test
   void addSchema_xmlSchemaWithDoctype_throwsVerificationException() {
-    String xxeSchema = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
-        + "<!DOCTYPE foo [\n"
-        + "  <!ENTITY xxe SYSTEM \"file:///etc/passwd\">\n"
-        + "]>\n"
-        + "<xs:schema xmlns:xs=\"http://www.w3.org/2001/XMLSchema\">\n"
-        + "  <xs:element name=\"test\" type=\"xs:string\"/>\n"
-        + "</xs:schema>";
+    String xxeSchema = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE foo [
+              <!ENTITY xxe SYSTEM "file:///etc/passwd">
+            ]>
+            <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema">
+              <xs:element name="test" type="xs:string"/>
+            </xs:schema>""";
 
     assertThrowsExactly(VerificationException.class,
         () -> schemaStore.addSchema(new ContentAccessorDirect(xxeSchema), XML));
